  Serialize, respectively.
* Renamed for the Network.Server class, renamed Open() and Close() to
  Initialize() and Deinitialize(), respectively
+ Added documentation for the networking code
+ Added overridable On*() methods for the NetLink, Server, and Client classes,
  so that they can be customized via derivation in addition to hooking events.
+ Added support for formatted binary reading.

2004.06.28 (alpha/beta)
-------------------
Release notes:
There aren't many changes this time, since I've been busy with work, school,
and other stuff. But I figured I should at least release these.

+ Added PriorityQueue.Dequeue, which does the same thing as
  PriorityQueue.DequeueMaximum
* Fixed a bug in Fixed64*Fixed64 or Fixed64*double multiplication
  with negative numbers, and also improved its speed
* Fixed a bug in the windowing code that caused the list of updated window
  rectangles to be cleared when the array was grown
* Fixed a similar bug in the audio code that caused the channels array to
  be cleared when the array was resized
+ Added dead zones and saturation zones to the joystick code (with the
  ability to set them on a per-axis basis).
* Altered the Input sample to use dead zones and saturation zones to
  eliminate jitter. Also added more joystick output to the input sample
  (it might not fit in the window anymore if you have lots of joysticks)
* Lowered the default audio buffer size (latency) from 100 to 50 milliseconds
* Fixed a bug in RedBlackTree that caused the Count property to be wrong
  after Clear() was called
+ Made Map, BinaryTree, and PriorityQueue serializable

2004.05.02 (alpha/beta)
-----------------------
Release stats (only counts code written by me):
Code:  20484 lines,  833493 bytes (60.81%), avg. 41 BPL
Docs:   7359 lines,  537105 bytes (39.19%), avg. 73 BPL
Total: 27843 lines, 1370598 bytes, avg. 49 BPL

Release notes:
This release has a lot more interface changes than I'd have liked, but the