@@ -361,6 +361,10 @@ U     Sets Unicode mode       NONE
       length parameter array, you can also pass a single array of <see cref="System.Object"/> that contains all
       the parameters.
      </para>
+     <para>For the formatted <see cref="Read"/> functions, you cannot pass format codes that have an unknown
+      length (eg, <c>s</c> without a prefix, or anything with a <c>?</c> prefix). This restriction may be relaxed
+      in the future.
+     </para>
      <example>
       <para>See the following examples:</para>
 <code>
@@ -371,7 +375,12 @@ IOH.Write(stream, "d?d", Array.Length, Array);
 // Codes taking Array/Vals accept both arrays and value lists. For instance:
 short[] arr = new short[] { 1, 2, 4, 8 };
 IOH.Write(stream, "4w", arr);        // writes eight bytes
+IOH.Write(stream, "wwww", arr);      // writes the same eight bytes
 IOH.Write(stream, "4w", 1, 2, 4, 8); // writes the same eight bytes
+
+// Reading, however, doesn't consider "4w" and "wwww" to be the same:
+IOH.Read(stream, "4w");   // reads an array containing 4 words
+IOH.Read(stream, "wwww"); // reads four individual words
 
 // An example taken from some .PSD writing code to begin the header. It
 // writes the signature (8BPS) as ASCII, the version byte (1), six padding
@@ -606,12 +615,12 @@ byte[] output = IOH.Write("dfp?d", parms);
 
  <Network>
   <Common>
-    <Connected>
+    <IsConnected>
       <summary>Returns true if the connection is open.</summary>
       <remarks>Note that this property may return true even if the connection has been broken. This method simply
       returns the connection state that existed when the most recent I/O operation was performed.
       </remarks>
-    </Connected>
+    </IsConnected>
     <DefaultFlags>
       <summary>Gets or sets the default flags that will be used for sending messages.</summary>
       <remarks>If an overload of <see cref="Send"/> is called that does not have a flags parameter, the value of
